# gpt-howto

./: Cargo.toml
src/: main.rs
